[package]
name = "habit_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
cliclack = "0.2"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "9.0.0"
google-sheets4 = "5.0.5"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.1"
serde_json = "1.0"
rand = "0.8"
